--- a/pos/src/main/resources/templates/pagina.html
+++ b/pos/src/main/resources/templates/pagina.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Misión y Visión</title>
+    <title>Misión,  Visión, Valores y Servicios</title>
 </head>
 <body>
     <h1 class="text-warning fw-bold">MISIÓN</h1>
@@ -12,5 +12,12 @@
 
     <h1 class="text-warning fw-bold">VISIÓN</h1>
     <p th:text="${vision}">Texto de visión por defecto.</p>
+
+    <h1 class="text-warning fw-bold">VALORES</h1>
+    <p th:text="${valores}">Texto de visión por defecto.</p>
+
+    <h1 class="text-warning fw-bold">SERVICIOS</h1>
+    <p th:text="${servicios}">Texto de visión por defecto.</p>
+
 </body>
 </html>
