--- a/pos/src/main/resources/templates/index.html
+++ b/pos/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
                 <a class="nav-link active" aria-current="page" th:href="@{/ProductosServicios/listarproductos}">Productos y Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Quienes Somos?</a>
+                <a class="nav-link" href="#">¿Quienes Somos?</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -28,24 +28,24 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                   <li><a class="dropdown-item" th:href="@{/pagina}">Misión y Visión</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" th:href="@{/catalogo}">Catalogo de cursos</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
+              </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">index</a>
               </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            <!-- Botón de Login -->
+            <a th:href="@{/home/login}" class="btn btn-outline-primary">Login</a>
           </div>
         </div>
       </nav>
+      <div class="container mt-5 text-center">
+        <img src="/uploads/imagen_logo.jpg" alt="Logo de Roller Speed School" class="img-fluid">
+      </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
 </body>
 </html>
