--- a/pos/src/main/resources/templates/index.html
+++ b/pos/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
               </li>
             </ul>
             <!-- Botón de Login -->
-            <a th:href="@{/home/login}" class="btn btn-outline-primary">Login</a>
+            <a th:href="@{/home/logout}" class="btn btn-outline-primary">Logout</a>
           </div>
         </div>
       </nav>
