--- a/pos/src/main/resources/templates/ListarUsuarios.html
+++ b/pos/src/main/resources/templates/ListarUsuarios.html
@@ -15,16 +15,14 @@
                     <tr>
                         <th>ID</th>
                         <th>Username</th>
-                        <th>Password</th>
-                        
+                        <th>Password</th>                        
                     </tr>
                 </thead>
                 <tbody>
                     <tr th:each="user : ${users}">
                         <td th:text="${user.id}"></td>
-                        <td th:text="${user.Username}"></td>
+                        <td th:text="${user.username}"></td>
                         <td th:text="${user.password}"></td>
-                    </td>
                     </tr>
                 </tbody>
             </table>
